# LlaShell

./: .gitignore  CMakeLists.txt  LlaShell.sln  README.md  THIRD_PARTY_LICENSES.txt
CoreIPC/: coreipc.def  coreipc.vcxproj
CoreIPC/include/CoreIPC/: CoreIPC.h  guardian.h  pipe_channel.h  protocol.h  shm_channel.h  types.h
CoreIPC/src/: coreipc.cpp  crc32.cpp  guardian.cpp  heartbeat.cpp  pipe_client.cpp  pipe_security.cpp  pipe_server.cpp  protocol_codec.cpp  shm_manager.cpp  shm_slot.cpp
Desktop/include/: desktop.h
Desktop/src/: desktop_main.cpp
LlaShellApp/src/: main.cpp
MainUI/include/: mainui.h
MainUI/src/: mainui_main.cpp
MediaParser/src/: mediaparser_main.cpp
Shared/: ipc_messages.h  shell_utils.h
ShellHost/src/: shellhost_main.cpp
Taskbar/include/: taskbar.h
Taskbar/src/: taskbar_main.cpp
Updater/src/: updater_main.cpp
resources/: LlaShell.rc  version_only.rc
